Eclipse1/SalesforceCI/ Enterprise/objects/Group_Association__c.object
<CustomObject>
    <description>A junction object to allow groups to be associated with categories, courses, and users.</description>
    <fields>
        <fullName>CYS_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CYS Category</label>
        <referenceTo>CYS_Category__c</referenceTo>
        <relationshipName>Group_Associations_Cat</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CYS_Group__c</fullName>
        <label>CYS Group</label>
        <referenceTo>CYS_Group__c</referenceTo>
        <relationshipName>Group_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ComboID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External ID used for updates. Groups with: Users, Courses, Categories.
GroupSFID_OtherSFID</description>
        <externalId>true</externalId>
        <label>ComboID</label>
        <length>45</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Training_Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Course</label>
        <referenceTo>TYS_TrainingCourse__c</referenceTo>
        <relationshipName>Group_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Group_Associations_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CYS Group Association</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Group Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CYS Group Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>